# src/features/posts/post.model.js
@@ -1,6 +1,15 @@
 let count = 0;
 let posts = []
 
+
+function isArchived(userId, post) {
+    let result = post.Archived.find(pa => pa == userId);
+    if (result) {
+        return true;
+    }
+    return false;
+}
+
 export default class postModel {
 
     constructor(userId, caption, imageUrl) {
@@ -8,11 +17,16 @@ export default class postModel {
         this.userId = userId;
         this.caption = caption;
         this.imageUrl = imageUrl;
+        this.Archived = [];
+        this.isDraft = false;
     }
 
+
+
     // for extracting all posts
-    static allPosts() {
-        return { success: true, posts }
+    static allPosts(userId) {
+        let allPosts = posts.filter(p => !isArchived(userId, p) && !p.isDraft)
+        return { success: true, allPosts: allPosts }
     }
 
     // for extracting posts based on id 
@@ -27,8 +41,8 @@ export default class postModel {
 
     // for extracting posts of current user
     static getPost(userId) {
-        let userPosts = posts.filter(p => p.userId == userId);
-        return { success: true, posts: userPosts }
+        let userPosts = posts.filter(p => p.userId == userId && !isArchived(userId, p) && !p.isDraft);
+        return { success: true, userPosts }
     }
 
     // for addding new post 
@@ -71,6 +85,53 @@ export default class postModel {
         }
         return { success: false, msg: "post not found" }
     }
+
+    // filter on caption 
+    static filterByCaption(caption, userId) {
+        let filteredPosts = posts.filter(p => p.caption.toUpperCase() == caption.toUpperCase() && !isArchived(userId, p) && !p.isDraft);
+        return { success: true, msg: "filtered by caption", posts: filteredPosts };
+    }
+
+    // to make post archieve 
+    static toggleArchieve(postId, userId) {
+        let post = posts.find(p.id == postId);
+        let msg = ""
+        if (post) {
+            let index = post.Archived.findIndex(pa => pa == userId);
+            if (index != -1) {
+                post.Archived.splice(index)
+                msg: "deleted from Archieve"
+            }
+            else {
+                post.Archived.push(userId)
+                msg: "Added to Archieve"
+            }
+            return { success: true, msg }
+        }
+        else {
+            return { success: false, msg: "post not found" }
+        }
+    }
+    // for addding new post 
+    static addToDraft = (userId, caption, imageUrl) => {
+        let newPost = new postModel(userId, caption, imageUrl);
+        newPost.isDraft = true
+        posts.push(newPost);
+        return { success: true, newPost }
+    }
+    // all archieved posts 
+    static allArchievedPosts(userId) {
+        let filteredAllPosts = posts.filter(p => isArchived(userId, p) && !p.isDraft)
+        return { success: true, allPosts: filteredAllPosts }
+    }
+
+    // all Draft posts  
+    static allDraftPosts(userId) {
+        let filteredAllPosts = posts.filter(p => p.userId == userId && isArchived(userId, p) && p.isDraft)
+        return { success: true, allPosts: filteredAllPosts }
+    }
+
+
 }
 
 
