# src/features/posts/post.route.js
@@ -1,5 +1,5 @@
 import express from "express";
-import { addPost, allPosts, deletePost, getPost, postById, updatePost } from "./post.controlller.js";
+import { addPost, allPosts, deletePost, getPost, postById, updatePost, filterByCaption, toggleArchieve, addToDraft, allArchievedPosts, allDraftPosts } from "./post.controller.js";
 
 import upload from "../../middlewares/fileUpload.js";
 
@@ -11,5 +11,10 @@ postRouter.get('/', getPost)
 postRouter.post('/', upload.single('imageUrl'), addPost)
 postRouter.delete('/:id', deletePost)
 postRouter.put('/:id', upload.single('imageUrl'), updatePost)
+postRouter.get('/filter/filterbycaption', filterByCaption)
+postRouter.put('/archieve/:postId', toggleArchieve)
+postRouter.put('/draft', addToDraft)
+postRouter.get('/archieve', allArchievedPosts)
+postRouter.get('/draft', allDraftPosts)
 
 export default postRouter;
